added html-webpack-plugin as dev dependency

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/jjman505/kanban-react#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^1.7.0",
     "webpack": "^1.12.9"
   }
 }
