--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "css-loader": "^0.23.0",
     "html-webpack-plugin": "^1.7.0",
+    "jshint": "^2.8.0",
+    "jshint-loader": "^0.8.3",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0",
