--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   "homepage": "https://github.com/jjman505/kanban-react#readme",
   "devDependencies": {
     "babel-loader": "^5.4.0",
+    "babel-plugin-react-transform": "^1.1.1",
     "css-loader": "^0.23.0",
     "html-webpack-plugin": "^1.7.0",
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
+    "react-transform-hmr": "^1.0.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0",
